--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>jquery</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
