main yaml file fixed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '17
+          java-version: '17'
 
       # Runs a single command using the runners shell
       - name: run maven clean package command
