--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: set up environment
+    name: Build design patterns project
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
